# order-risk-assessment-ms

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.adoc  README.md  docker-compose-dev.yml
doc/: risk-api.yaml
doc/swaggerui/: index.html
migrations/2020-05-13-000838_risk_assessment/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs
src/app/: risk_assessment_service.rs
src/app/domain/: individual_tax_payer_service.rs  models.rs  repository.rs
src/infra/: assesment_mapper.rs  database.rs  entities.rs  risk_postgres.rs
src/infra/db/: entities.rs  risk_postgres.rs
src/infra/http/: document.rs  rfb_client.rs
src/interface/: api_server.rs  documents.rs  operation_handlers.rs
