[package]
name = "order_risk_assessment_ms"
version = "0.1.0"
authors = ["luizinhoab <luizinhoab@gmail.com>"]
edition ="2018"

[dependencies]
actix-rt = {version = "1.1.1"}
actix-web = {version = "2.0.0"}
actix-files = {version = "0.2.1"}
log = {version = "0.4.8"}
env_logger = {version = "0.7.1"}
dotenv = {version = "0.15.0"}

