[package]
name = "order_risk_assessment_ms"
version = "0.1.0"
authors = ["luizinhoab <luizinhoab@gmail.com>"]
edition ="2018"

[dependencies]
actix-rt = {version = "1.1.1"}
actix-web = {version = "2.0.0"}
actix-files = {version = "0.2.1"}
log = {version = "0.4.8"}
env_logger = {version = "0.7.1"}
dotenv = {version = "0.15.0"}
chrono = { version = "0.4.6"}
uuid = { version = "0.8.1"}
r2d2 = {version = "0.8.8"}
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
diesel_migrations = {version = "1.4.0"}

[dev-dependencies]
tempdb_cockroach = { version = "1.0.2" }
lazy_static =  { version = "1.4.0"}


