[package]
name = "order_risk_assessment_ms"
version = "0.1.0"
authors = ["luizinhoab <luizinhoab@gmail.com>"]
edition ="2018"

[dependencies]
actix= {version="0.9.0"}
actix-rt = {version = "1.1.1"}
actix-web = {version = "2.0.0"}
actix-files = {version = "0.2.1"}
log = {version = "0.4.8"}
env_logger = {version = "0.7.1"}
dotenv = {version = "0.15.0"}
serde = {version = "1.0.106"}
serde_derive = {  version = "1.0.110"}
serde_json = {version="1.0.53"}
chrono = { version = "0.4.6" , features = ["serde"]}
uuid = { version = "0.8.1", features = ["serde", "v4"]}
r2d2 = {version = "0.8.8"}
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
diesel_migrations = {version = "1.4.0"}
derive_more = {version = "0.99.6" }
validator = { version = "0.10" }
validator_derive = { version = "0.10" }
lazy_static =  { version = "1.4.0"}
async-trait = {version = "0.1.31"}
regex = { version = "1.3.7"}
reqwest = { version = "0.10", features = ["json"] }

[dev-dependencies]
tempdb_cockroach = { version = "1.0.2" }
mockall = { version = "0.7.1"}
httpmock = {version = "0.3"}

